--- a/css/style.css
+++ b/css/style.css
@@ -223,11 +223,6 @@
     color: blue;
 }
 
-.imagem-personagem img{
-    width: auto;
-    height: auto;
-}
-
 .iniciar-jogo{
     font-family: 'Amatic SC', cursive;
     font-size: 1.5em;
@@ -242,13 +237,6 @@
     margin: 1% 1%;
     width: 20%;
 }
-
-/*
-.container-principal, .tela-inicial{
-    background-image: url(/projeto-final-modulo1/assets/bg7.jpg);
-    background-repeat: round;
-    background-size: 100%;
-}*/
 
 .personagem {
     width: 25%;
@@ -282,7 +270,6 @@
     text-align: center;
     align-items: center;
     flex-direction: column;
-
     padding: 2%;
     margin-bottom: 1%;
     font-size: 1.4em;
@@ -306,7 +293,7 @@
 
     .container-principal{
         width: 100%;
-        height: 100%;
+        height: 100vh;
     }
 
     .caixa-perguntas{
