--- a/css/style.css
+++ b/css/style.css
@@ -43,17 +43,17 @@
 }
 
 .container{
-    font-family: 'Open Sans', sans-serif;
+    background-image: url(/projeto-final-modulo-um/assets/park.png);
+    background-color: rgba(233, 245, 177, 0.853);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: center;
     width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-image: url(/projeto-final-modulo-um/assets/bg8.jpg);
-    background-color: rgba(233, 245, 177, 0.853);
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-position: center;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .container-bem-vindo{
@@ -124,7 +124,7 @@
     display: flex;
     text-align: center;
     justify-content: space-around;
-    width: auto;
+    width: 100%;
     height: auto;
 }
 
@@ -239,7 +239,7 @@
 }
 
 .personagem {
-    width: 25%;
+    width: 23%;
     height: auto;
 }
 
@@ -293,7 +293,7 @@
 
     .container-principal{
         width: 100%;
-        height: 100vh;
+        height: 100%;
     }
 
     .caixa-perguntas{
@@ -335,7 +335,7 @@
 
     .personagem{
         width: 80%;
-        height: 80%;
+        height: 100%;
         margin-bottom: 3%;
         align-self: center;
     }
