--- a/css/style.css
+++ b/css/style.css
@@ -27,14 +27,14 @@
 }
 
 .caixa-perguntas{
-    width: 45%;
-    height: 100%;
+    width: 50%;
+    height: auto;
     padding: 2%;
     display: flex;
     flex-direction: column;
     text-align: start;
     align-content: center;
-    color: rgba(255, 255, 255, 0.79);
+    color: rgb(255, 255, 255);
     border-radius: 5px;
 }
 
@@ -43,10 +43,10 @@
 }
 
 .container{
-    background-image: url(/projeto-final-modulo-um/assets/park.png);
+    background-image: url(/projeto-final-modulo-um/assets/bg8.jpg);
     background-color: rgba(233, 245, 177, 0.853);
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
     background-position: center;
     width: 100%;
     height: 100vh;
@@ -99,7 +99,6 @@
 
 .container-iniciar-jogo{
     flex-direction: column;
-
     width: auto;
     height: auto;
 }
@@ -112,9 +111,10 @@
 
 .container-principal{
     background-image: linear-gradient(rgb(1, 202, 252), rgb(65, 160, 190), rgb(93, 177, 107));
+    background-size: cover;
     font-family: 'Open Sans', sans-serif;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -125,7 +125,7 @@
     text-align: center;
     justify-content: space-around;
     width: 100%;
-    height: auto;
+    height: 100%;
 }
 
 .container-personagens a{
@@ -141,9 +141,9 @@
     background-color: rgba(72, 136, 196, 0.883);
     border: 1px solid rgba(185, 198, 210, 0.883);
     border-radius: 15px;
-    width: auto;
-    height: auto;
-    padding: 2%;
+    width: 100%;
+    height: 100vh;
+    padding: 1.5%;
 }
 
 .comecar-botao {
@@ -194,14 +194,20 @@
     background-color: rgba(160, 167, 174, 0.263);
     border: 1px solid rgba(185, 198, 210, 0.883);
     border-radius: 5px;    
-    width: auto;
-    height: auto;
+    width: 80%;
+    height: 100%;
     display: flex;
     justify-content: space-between;
+    align-self: center;
     align-content: center;
+    align-items: center;
     text-align: center;
-    padding: 1%;
-    margin: 1%;
+    margin-bottom: 10%;
+}
+
+.escolhido{
+    width: auto;
+    height: 100vh;
 }
 
 .escolhido a{
@@ -239,7 +245,7 @@
 }
 
 .personagem {
-    width: 23%;
+    width: 25%;
     height: auto;
 }
 
@@ -249,8 +255,8 @@
 
 .personagem-escolhido{
     border-radius: 5px;    
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-content: center;
@@ -264,7 +270,6 @@
 
 .titulo{
     font-family: 'Amatic SC', cursive;
-    font-weight: 500;
     display: flex;
     justify-content: center;
     text-align: center;
@@ -276,11 +281,6 @@
 }
 
 @media (max-width: 768px) {
-
-    .container {
-        background-image: url(/projeto-final-modulo-um/assets/park.png);
-        background-size: cover;
-    }
 
     .container-bem-vindo{
         width: 100%;
@@ -304,7 +304,7 @@
 
     .comecar-personagem{
         flex-direction: column;
-        width: auto;
+        width: 100%;
         height: auto;
     }
 
@@ -314,6 +314,11 @@
 
     .container-personagens{
         flex-direction: column; 
+    }
+
+    .escolhido{
+        width: 100%;
+        height: 100vh;
     }
 
     .footer{
