--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@
 }
 
 .container{
-    background-image: url(/modulo-um/projeto-final-modulo-um/assets/bg8.jpg);
+    background-image: url(/assets/bg8.jpg);
     background-color: rgba(233, 245, 177, 0.853);
     background-repeat: no-repeat;
     background-size: cover;
